# vizprez

./: .gitignore  _quarto.yaml  about.html  about.qmd  cool.py  cool2.py  index.qmd  main.py  pyproject.toml  sandbox.py  search.json  style.css
timeseries/: area.py  bar.py  calendar_heatmap.py  circular_bar.py  data.py  heatmap2.py  line.py
