[project]
name = "vizprez"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dayplot>=0.2.0",
    "great-tables>=0.17.0",
    "matplotlib>=3.10.1",
    "morethemes>=0.3.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pypistats>=1.9.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "selenium>=4.29.0",
]
